--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <p class="between">(Between 1 and 40)</p>
     <main>
       <section class="left">
-        <input class="quantity guess" id="id_form-0-quantity" min="0" name="form-0-quantity" value="1" type="number">
-        <!-- <input type="number" min="1" max="40" class="guess" /> -->
+        <input type="number" min="1" max="40" class="guess" />
         <button class="btn check">Check!</button>
       </section>
       <section class="right">
